flex/flex-tests/testData/js2_highlighting/NSDeclarationUnderPackage.js2
package {
  namespace <error descr="Namespace 'Foo' should be defined in file 'Foo.js2'">Foo</error>;
}